# concilium

./: .env.example  .gitignore  Cargo.toml  README.md
apps/: Cargo.toml
apps/src/: cli.rs  server.rs
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core-ext/: Cargo.toml
core-ext/src/: chain_state.rs  epoch.rs  lib.rs  temporary_node_ids.rs
core-ext/src/db/: mod.rs
core-ext/src/jrpc/: mod.rs  rpc_module_context.rs  utxo.rs
core-ext/src/mempool/: active_nodes.rs  mod.rs  nodes_awaiting_confirmation.rs
core-ext/src/node/: active_node.rs  awaiting_confirmation_node.rs  mod.rs  self_node.rs  serializable_node.rs
core-ext/src/transaction/: broadcast_transaction_temp.rs  get_account_transactions.rs  mod.rs  send_raw_transaction_request.rs  send_raw_transaction_request_txinput.rs  send_raw_transaction_request_txoutput.rs  send_raw_transaction_response.rs  sender_transaction_temp.rs  transaction.rs  txinput.rs  txoutput.rs
core-ext/src/transaction/get_transaction_by_hash/: mod.rs  response.rs  transaction.rs  txinput.rs  txoutput.rs
core/src/: active_nodes.rs  chain_state.rs  cli.rs  db.rs  epoch.rs  lib.rs  mempool.rs  node.rs  nodes_awaiting_confirmation.rs  temporary_node_ids.rs  transaction.rs
core/src/jrpc/: mod.rs  rpc_module_context.rs  transaction.rs  utxo.rs
core/src/rpc/: connection.rs  epoch.rs  identifier.rs  mod.rs  transaction.rs
error/: Cargo.toml
error/src/: lib.rs
genesis/: Cargo.toml
genesis/src/: lib.rs
jrpc/: Cargo.toml
jrpc/src/: get_account_transactions.rs  get_address_utxos.rs  get_transaction_by_hash.rs  lib.rs  send_raw_transaction.rs
log/: Cargo.toml
log/src/: lib.rs
proto-defs/: Cargo.toml  build.rs
proto-defs/protos/: connection.proto  epoch.proto  identifier.proto  transaction.proto
proto-defs/src/: connection.rs  entropy.rs  epoch.rs  identifier.rs  lib.rs  transaction.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
rpc/src/connection/: client.rs  server.rs
rpc/src/epoch/: client.rs  server.rs
rpc/src/identifier/: client.rs  server.rs
rpc/src/transaction/: client.rs  server.rs
shared/: Cargo.toml
shared/src/: binary.rs  chacha20.rs  epoch.rs  ip.rs  lib.rs  sha.rs  transaction.rs
shared/src/coventor/vec/: unsigned_int.rs
transaction/: .gitignore  Cargo.toml
transaction/src/: lib.rs  validation.rs
