[workspace]
members = []

resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["concilium Labs Maintainers <maintainers@concilium-labs.com>"]
repository = "https://github.com/concilium-labs"
homepage = "https://concilium-labs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
