[package]
name = "concilium-apps"
description = "concilium Apps"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dotenvy.workspace = true
tokio.workspace = true
tonic.workspace = true
blst.workspace = true
rand.workspace = true
chrono.workspace = true
hex.workspace = true
ahash.workspace = true
jsonrpsee.workspace = true
clap.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tower.workspace = true
hyper.workspace = true
concilium-rpc.workspace = true
concilium-error.workspace = true
concilium-log.workspace = true
concilium-shared.workspace = true
concilium-proto-defs.workspace = true
concilium-core.workspace = true
concilium-core-ext.workspace = true
concilium-transaction.workspace = true
concilium-genesis.workspace = true
concilium-jrpc.workspace = true
concilium-cli.workspace = true

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"