[package]
name = "concilium-cli"
description = "concilium Cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blst.workspace = true
ed25519-dalek.workspace = true
rand = "0.8"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
jsonrpsee.workspace = true
concilium-error.workspace = true
concilium-core.workspace = true
concilium-core-ext.workspace = true
concilium-shared.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_cli"