[package]
name = "concilium-core-ext"
description = "concilium Core Ext"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
tokio.workspace = true
chrono.workspace = true
ahash.workspace = true
rocksdb.workspace = true
left-right.workspace = true
concilium-core.workspace = true
concilium-error.workspace = true
concilium-shared.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_core_ext"
