[package]
name = "concilium-core"
description = "concilium Core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
ahash.workspace = true
serde.workspace = true
rocksdb.workspace = true
tokio.workspace = true
serde-big-array.workspace = true
concilium-proto-defs.workspace = true
clap.workspace = true
left-right.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_core"
