[package]
name = "concilium-error"
description = "concilium Error"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rocksdb.workspace = true
blst.workspace = true
bincode.workspace = true
tonic.workspace = true
hex.workspace = true
tokio.workspace = true
dotenvy.workspace = true
jsonrpsee.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_error"