[package]
name = "concilium-jrpc"
description = "concilium JRPC"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
blst.workspace = true
ed25519-dalek.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
rayon.workspace = true
ahash.workspace = true
concilium-core.workspace = true
concilium-core-ext.workspace = true
concilium-error.workspace = true
concilium-shared.workspace = true
concilium-rpc.workspace = true
concilium-proto-defs.workspace = true
concilium-transaction.workspace = true
jsonrpsee.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_jrpc"