[package]
name = "concilium-log"
description = "concilium Log"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
chrono.workspace = true
concilium-error.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_log"