[package]
name = "concilium-proto-defs"
description = "concilium Proto Definitions"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "0.12.3"

[lib]
crate-type = ["lib"]
name = "concilium_proto_defs"

