[package]
name = "concilium-transaction"
description = "concilium Transaction"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rust_decimal.workspace = true
concilium-core.workspace = true
concilium-core-ext.workspace = true
concilium-shared.workspace = true
concilium-error.workspace = true

[lib]
crate-type = ["lib"]
name = "concilium_transaction"